--- a/app/templates/instances/detail.html
+++ b/app/templates/instances/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% from 'macros/environment_macro.html' import environment_badge %}
 
 {% block title %}{{ instance.name }} - 实例详情{% endblock %}
 
